force-app/main/default/objects/Service_Costings__c/Service_Costings__c.object-meta.xml
<CustomObject>
    <description>Created by AppSheet</description>
    <label>Service Costings</label>
    <nameField>
        <label>Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Costingss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>