force-app/main/default/objects/Service_Costings__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Costs if per Sqft, size of repair etc.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>