force-app/main/default/objects/Service_Costings__c/fields/Est_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Est_Hrs__c</fullName>
    <label>Est Hrs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>