force-app/main/default/objects/Service_Costings__c/fields/Materials_Bin_ID__c.field-meta.xml
<CustomField>
    <fullName>Materials_Bin_ID__c</fullName>
    <label>Materials Bin ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>