force-app/main/default/objects/Service_Costings__c/fields/ServiceID__c.field-meta.xml
<CustomField>
    <fullName>ServiceID__c</fullName>
    <externalId>true</externalId>
    <label>ServiceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>